applications/flask-redis/2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: registry.gitlab.com/sk-pub/image-registry/flask-redis:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
